make tests runnable again

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
-python_paths = src
+pythonpath = src tests
 testpaths = tests
 addopts = --flakes --color=yes
 markers = integration
 python_files = *.py
+asyncio_mode = auto
